0031876: Configuration - Prs3d_Arrow::DrawShaded() crashes in msvc10 win32 Release build

Use longer code syntax to workaround compiler bug.